--- a/swagger/api.yaml
+++ b/swagger/api.yaml
@@ -64,41 +64,71 @@ paths:
   "/enterprise/v1/enterprise-customer/{uuid}/learner-summary":
     $ref: "https://raw.githubusercontent.com/edx/edx-enterprise-data/8fc95e4/api.yaml#/endpoints/v1/enterpriseCustomerLearnerSummary"
 
-  # Registrar IDA
+  # Registrar API Proxy
+  # Note: There's an unresolved issue involving trailing slashes with proxy integrations in API Gateway.
+  # Apparently all trailing slashes included in the value of {proxy} are trimmed, see this AWS
+  # support forum thread: https://forums.aws.amazon.com/thread.jspa?messageID=749625
+  # Our registrar API endpoint paths require trailing slashes, but other registrar paths, like those
+  # under /static, cannot have them.  Thus, we've broken apart the different path types under registrar.
+  # This means that this specification must be updated each time a new version of the
+  # registrar API is released.
+
   "/registrar/api-docs":
-    $ref: "https://raw.githubusercontent.com/edx/registrar/d6903653a7d7edda6326c3afa29c946c21698354/.api-generated.yaml#/endpoints/swagger"
+    x-amazon-apigateway-any-method:
+      x-amazon-apigateway-integration:
+        type: "http_proxy"
+        uri: "https://${stageVariables.registrar_host}/api-docs/"
+        httpMethod: "ANY"
+
   "/registrar/login":
-    $ref: "https://raw.githubusercontent.com/edx/registrar/d6903653a7d7edda6326c3afa29c946c21698354/.api-generated.yaml#/endpoints/login"
+    x-amazon-apigateway-any-method:
+      x-amazon-apigateway-integration:
+        type: "http_proxy"
+        uri: "https://${stageVariables.registrar_host}/login/"
+        httpMethod: "ANY"
+
   "/registrar/logout":
-    $ref: "https://raw.githubusercontent.com/edx/registrar/d6903653a7d7edda6326c3afa29c946c21698354/.api-generated.yaml#/endpoints/logout"
+    x-amazon-apigateway-any-method:
+      x-amazon-apigateway-integration:
+        type: "http_proxy"
+        uri: "https://${stageVariables.registrar_host}/logout/"
+        httpMethod: "ANY"
+
   "/registrar/static/{proxy+}":
-    $ref: "https://raw.githubusercontent.com/edx/registrar/d6903653a7d7edda6326c3afa29c946c21698354/.api-generated.yaml#/endpoints/static"
-  # Registrar Mock Endpoints
-  "/registrar/v1-mock/jobs/{job_id}":
-    $ref: "https://raw.githubusercontent.com/edx/registrar/d6903653a7d7edda6326c3afa29c946c21698354/.api-generated.yaml#/paths/~1v1-mock~1jobs~1{job_id}~1"
-  "/registrar/v1-mock/programs":
-    $ref: "https://raw.githubusercontent.com/edx/registrar/d6903653a7d7edda6326c3afa29c946c21698354/.api-generated.yaml#/paths/~1v1-mock~1programs~1"
-  "/registrar/v1-mock/programs/{program_key}":
-    $ref: "https://raw.githubusercontent.com/edx/registrar/d6903653a7d7edda6326c3afa29c946c21698354/.api-generated.yaml#/paths/~1v1-mock~1programs~1{program_key}~1"
-  "/registrar/v1-mock/programs/{program_key}/enrollments":
-    $ref: "https://raw.githubusercontent.com/edx/registrar/d6903653a7d7edda6326c3afa29c946c21698354/.api-generated.yaml#/paths/~1v1-mock~1programs~1{program_key}~1enrollments~1"
-  "/registrar/v1-mock/programs/{program_key}/courses":
-    $ref: "https://raw.githubusercontent.com/edx/registrar/d6903653a7d7edda6326c3afa29c946c21698354/.api-generated.yaml#/paths/~1v1-mock~1programs~1{program_key}~1courses~1"
-  "/registrar/v1-mock/programs/{program_key}/courses/{course_id}/enrollments":
-    $ref: "https://raw.githubusercontent.com/edx/registrar/d6903653a7d7edda6326c3afa29c946c21698354/.api-generated.yaml#/paths/~1v1-mock~1programs~1{program_key}~1courses~1{course_id}~1enrollments~1"
-  # Registrar v1 endpoins
-  "/registrar/v1/jobs/{job_id}":
-    $ref: "https://raw.githubusercontent.com/edx/registrar/d6903653a7d7edda6326c3afa29c946c21698354/.api-generated.yaml#/paths/~1v1~1jobs~1{job_id}~1"
-  "/registrar/v1/programs":
-    $ref: "https://raw.githubusercontent.com/edx/registrar/d6903653a7d7edda6326c3afa29c946c21698354/.api-generated.yaml#/paths/~1v1~1programs~1"
-  "/registrar/v1/programs/{program_key}":
-    $ref: "https://raw.githubusercontent.com/edx/registrar/d6903653a7d7edda6326c3afa29c946c21698354/.api-generated.yaml#/paths/~1v1~1programs~1{program_key}~1"
-  "/registrar/v1/programs/{program_key}/enrollments":
-    $ref: "https://raw.githubusercontent.com/edx/registrar/d6903653a7d7edda6326c3afa29c946c21698354/.api-generated.yaml#/paths/~1v1~1programs~1{program_key}~1enrollments~1"
-  "/registrar/v1/programs/{program_key}/courses":
-    $ref: "https://raw.githubusercontent.com/edx/registrar/d6903653a7d7edda6326c3afa29c946c21698354/.api-generated.yaml#/paths/~1v1~1programs~1{program_key}~1courses~1"
-  "/registrar/v1/programs/{program_key}/courses/{course_id}/enrollments":
-    $ref: "https://raw.githubusercontent.com/edx/registrar/d6903653a7d7edda6326c3afa29c946c21698354/.api-generated.yaml#/paths/~1v1~1programs~1{program_key}~1courses~1{course_id}~1enrollments~1"
+    x-amazon-apigateway-any-method:
+      parameters:
+      - name: "proxy"
+        in: "path"
+      x-amazon-apigateway-integration:
+        type: "http_proxy"
+        uri: "https://${stageVariables.registrar_host}/static/{proxy}"
+        httpMethod: "ANY"
+        requestParameters:
+          integration.request.path.proxy: "method.request.path.proxy"
+
+  "/registrar/v1/{proxy+}":
+    x-amazon-apigateway-any-method:
+      parameters:
+      - name: "proxy"
+        in: "path"
+      x-amazon-apigateway-integration:
+        type: "http_proxy"
+        uri: "https://${stageVariables.registrar_host}/api/v1/{proxy}/"
+        httpMethod: "ANY"
+        requestParameters:
+          integration.request.path.proxy: "method.request.path.proxy"
+
+  "/registrar/v1-mock/{proxy+}":
+    x-amazon-apigateway-any-method:
+      parameters:
+      - name: "proxy"
+        in: "path"
+      x-amazon-apigateway-integration:
+        type: "http_proxy"
+        uri: "https://${stageVariables.registrar_host}/api/v1-mock/{proxy}/"
+        httpMethod: "ANY"
+        requestParameters:
+          integration.request.path.proxy: "method.request.path.proxy"
 
 # edX extension point. Lists the vendors in use and their specific
 #  parameters that are expected by upstream refs.
