--- a/swagger/api.yaml
+++ b/swagger/api.yaml
@@ -73,27 +73,53 @@ paths:
     $ref: "https://raw.githubusercontent.com/edx/edx-enterprise-data/eb793cf/api.yaml#/endpoints/v2/enterpriseCustomerLearnerSummary"
 
   # Added by TNL team to support Studio content API
-  "/contentstore/v1/file_asset/{proxy+}":
+  "/contentstore/v1/file_assets/{proxy+}":
     x-amazon-apigateway-any-method:
       parameters:
       - name: "proxy"
         in: "path"
       x-amazon-apigateway-integration:
         type: "http_proxy"
-        uri: "https://${stageVariables.studio_host}/api/contentstore/v1/file_asset/{proxy}"
+        uri: "https://${stageVariables.studio_host}/api/contentstore/v1/file_assets/{proxy}"
         httpMethod: "ANY"
         requestParameters:
           integration.request.path.proxy: "method.request.path.proxy"
 
   # Added by TNL team to support Studio content API
-  "/contentstore/v1/video_asset/{proxy+}":
+  "/contentstore/v1/videos/uploads/{proxy+}":
     x-amazon-apigateway-any-method:
       parameters:
       - name: "proxy"
         in: "path"
       x-amazon-apigateway-integration:
         type: "http_proxy"
-        uri: "https://${stageVariables.studio_host}/api/contentstore/v1/video_asset/{proxy}"
+        uri: "https://${stageVariables.studio_host}/api/contentstore/v1/videos/uploads/{proxy}"
+        httpMethod: "ANY"
+        requestParameters:
+          integration.request.path.proxy: "method.request.path.proxy"
+
+  # Added by TNL team to support Studio content API
+  "/contentstore/v1/videos/images/{proxy+}":
+    x-amazon-apigateway-any-method:
+      parameters:
+      - name: "proxy"
+        in: "path"
+      x-amazon-apigateway-integration:
+        type: "http_proxy"
+        uri: "https://${stageVariables.studio_host}/api/contentstore/v1/videos/images/{proxy}"
+        httpMethod: "ANY"
+        requestParameters:
+          integration.request.path.proxy: "method.request.path.proxy"
+
+  # Added by TNL team to support Studio content API
+  "/contentstore/v1/video_transcripts/{proxy+}":
+    x-amazon-apigateway-any-method:
+      parameters:
+      - name: "proxy"
+        in: "path"
+      x-amazon-apigateway-integration:
+        type: "http_proxy"
+        uri: "https://${stageVariables.studio_host}/api/contentstore/v1/video_transcripts/{proxy}"
         httpMethod: "ANY"
         requestParameters:
           integration.request.path.proxy: "method.request.path.proxy"
